# plasma

./: .gitignore  pyproject.toml
ML_Data/: ML_data_for_learning_N1000.txt
src/plasma_predictor/frontend/: streamlit_app.py
